--- a/index.html
+++ b/index.html
@@ -85,29 +85,39 @@
                     </div>
                     <div class="row second_staff_block">
                 <div class="col-3">
-                    <div class="guarant">
-                        <img class="staff_ico" src="/img/ico.png" alt="шестеренка">
+                    <div class="guarant hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/gears.png" alt="шестеренка">
+                        </div>
                         <h5 class="title_of_midblock">100% Guarantee</h5>
                         <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="shipping">
-                        <img class="staff_ico" src="/img/ico.png" alt="shipping img">
-                        <h5 class="title_of_midblock">Free shipping</h5>
-                        <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                    <div class="shipping hoverguarant">
+                        <div class="present_blocks">
+                            <div class="img_block">
+                                <img class="staff_ico" src="/img/shipping.png" alt="shipping img">
+                            </div>
+                            <h5 class="title_of_midblock">Free shipping</h5>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="warranty">
-                        <img class="staff_ico" src="/img/ico.png" alt="warranty img">
+                    <div class="warranty hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/warranty.png" alt="warranty img">
+                        </div>
                         <h5 class="title_of_midblock">2+ year warranty</h5>
                         <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="delivery">
-                        <img class="staff_ico" src="/img/ico.png" alt="delivery img">
+                    <div class="delivery hoverguarant">
+                        <div class="img_block">
+                            <img class="delivery_ico" src="/img/delivery.png" alt="delivery img">
+                        </div>
                         <h5 class="title_of_midblock">fast delivery</h5>
                         <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
                     </div>
