--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                             <h5 class="whywe">Always keeps your life moving like a bicycle</h5>
                             <p class="ourpluses" >What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry 1500s <br> when an unknown printer took What is Lorem Ipsum Lorem</p>
                     </div>
-                    <div class="row second_staff_block">
+                </div>
+            </div>
+            <div class="row second_staff_block">
                 <div class="col-3">
                     <div class="guarant hoverguarant">
                         <div class="img_block">
@@ -122,8 +124,45 @@
                         <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
                     </div>
                 </div>
+            </div>
+            <div class="row second_staff_block">
+                <div class="col-3">
+                    <div class="licenses hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/licence.png" alt="licence" >
+                        </div>
+                            <h5 class="title_of_midblock">Licenses & Certificates</h5>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="fitting hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/fitting.png" alt="fitting" >
+                        </div>
+                            <h5 class="title_of_midblock">Saddle personal fitting</h5>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="yours hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/yours.png" alt="Always keep yours" >
+                        </div>
+                            <h5 class="title_of_midblock">Always keeps yours</h5>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                    </div>
+                 </div>
+                <div class="col-3">
+                    <div class="here hoverguarant">
+                        <div class="img_block">
+                            <img class="staff_ico" src="/img/helmet.png" alt="helmet" >
+                        </div>
+                            <h5 class="title_of_midblock">First time here</h5>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                    </div>
                 </div>
             </div>
-            </div>
+        </div>
     </body>
 </html>
