Lower bikeblock is done and added Bike Service block

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <img class="staff_ico" src="/img/licence.png" alt="licence" >
                         </div>
                             <h5 class="title_of_midblock">Licenses & Certificates</h5>
-                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
+                            <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is <br> simply dummy text of the.</p>
                     </div>
                 </div>
                 <div class="col-3">
@@ -161,6 +161,28 @@
                             <h5 class="title_of_midblock">First time here</h5>
                             <p class="text_of_midblock">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container service_block">
+            <div class="row">
+                <div class="col-7">
+                    <div class="textservice">
+                        <h3 class="title_aboutbike">Bike service & repair</h3>
+                        <p class="text_aboutbike first_about">"What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry 1500s when an unknown printer took What is Lorem Ipsum Lorem s when an <br> unknown printer took a galley of type.</p>
+                        <ul class="our_pluses">
+                            <li><i class="fal fa-check-square"></i>01. Tune-ups & builds</li>
+                            <li><i class="fal fa-check-square"></i>02. Adjust & install</li>
+                            <li><i class="fal fa-check-square"></i>03. Personal bike fit</li>
+                            <li><i class="fal fa-check-square"></i>04. Free delivery</li>
+                            <li><i class="fal fa-check-square"></i>05. Full Package Tuning</li>
+                        </ul>
+                        <a class="readmore" href="#">Read More</a>
+                    </div>
+                    
+                </div>
+                <div class="col-5">
+                    <img class="bikeservice" src="/img/wheel2.png" alt="wheel2" >
                 </div>
             </div>
         </div>
