Added Solution block

--- a/index.html
+++ b/index.html
@@ -186,5 +186,19 @@
                 </div>
             </div>
         </div>
+        <div class="container solutions_block">
+            <div class="row">
+                <div class="col-6">
+                    <img class="videobike" src="/img/video.png" width="558px" height="360px" alt="presentation video" >
+                </div>
+                <div class="col-6">
+                    <div class="textsolution">
+                        <h3 class="title_aboutbike">A solution to ride your <br>health problems</h3>
+                        <p class="text_aboutbike bottom_spacing">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry 1500s when an unknown printer took What is Lorem Ipsum Lorem s when an unknown printer took a galley of type and <br> scrambled it to make a type specimen..</p>
+                    </div>  
+                    <a class="readmore solution_button" href="#">Read More</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
